k8s/wecrew-itsm/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wecrew-itsm
  labels:
    app.kubernetes.io/part-of: linkedeye
